--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -13,3 +13,10 @@
   <%= f.text_field :inventory %>
   <%= f.submit "submit" %>
 <% end %>
+<script type="text/javascript">
+  $(function () {
+    $('form').submit(function(e) {
+      
+    });
+  });
+</script>
