--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -16,6 +16,9 @@
 <script type="text/javascript">
   $(function () {
     $('form').submit(function(e) {
+      e.preventDefault();
+      const values = $(this).serialize();
+      const posting = $.post('/products', values);
       
     });
   });
