automatically backed up by learn

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -25,7 +25,8 @@
       e.preventDefault();
       const values = $(this).serialize();
       const posting = $.post('/products', values);
-      
+      $("#title").text(data["title"]);
+      $("#desc").text(data["description"]);
     });
   });
 </script>
