--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -23,10 +23,11 @@
   $(function () {
     $('form').submit(function(e) {
       e.preventDefault();
-      const values = $(this).serialize();
-      const posting = $.post('/products', values);
-      $("#title").text(data["title"]);
-      $("#desc").text(data["description"]);
+      const posting = $.post('/products', $(this).serialize());
+      posting.done(function(data) {
+        $("#title").text(data["title"]);
+        $("#desc").text(data["description"]);        
+      });
     });
   });
 </script>
