--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -17,6 +17,8 @@
 <div id="posting">
   <h2 id="title"></h2>
   <p id="desc"></p>
+  <p id="price"></p>
+  <p id="inventory"></p>
 </div>
 
 <script type="text/javascript">
