automatically backed up by learn

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -29,6 +29,8 @@
       posting.done(function(data) {
         $("#title").text(data["title"]);
         $("#desc").text(data["description"]);
+        $("#price").text(data["price"]);
+        $("#inventory").text(data["inventory"]);
       });
     });
   });
