--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 <div id="posting">
-  <h2 id="title"></h2>
+  <h2 id="name"></h2>
   <p id="desc"></p>
   <p id="price"></p>
   <p id="inventory"></p>
