--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -27,7 +27,7 @@
       e.preventDefault();
       const posting = $.post('/products', $(this).serialize());
       posting.done(function(data) {
-        $("name").text(data["name"]);
+        $("#name").text(data["name"]);
         $("#desc").text(data["description"]);
         $("#price").text(data["price"]);
         $("#inventory").text(data["inventory"]);
